[project]
name = "httpx-async-pooling"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "John Doe", email = "email@example.com"},
]
dependencies = [
    "httpx>=0.27.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
